--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="project">
-              <a href="https://github.com/harsi15/Depression-Detection-Classifier">
+              <a href="https://github.com/harsi15/Depression-Detection-Classifier" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -447,7 +447,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="project">
-              <a href="https://github.com/harsi15/Foody">
+              <a href="https://github.com/harsi15/Foody" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -465,7 +465,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="certificate">
-              <a href="assets/Documents/Certificates/GoogleCertificate.pdf">
+              <a href="assets/Documents/Certificates/GoogleCertificate.pdf" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -483,7 +483,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="certificate">
-              <a href="assets/Documents/Certificates/python1 certificate.pdf">
+              <a href="assets/Documents/Certificates/python1 certificate.pdf" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -501,7 +501,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="certificate">
-              <a href="assets/Documents/Certificates/python data structures certificate.pdf">
+              <a href="assets/Documents/Certificates/python data structures certificate.pdf" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -519,7 +519,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="project">
-              <a href="https://github.com/harsi15/BookAddict" target="_blank">
+              <a href="https://github.com/harsi15/BookAddict" target="_blank" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -537,7 +537,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="certificate">
-              <a href="#">
+              <a href="./assets/Documents/Certificates/InternshipCertificate.pdf" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
