Fixing resume file bug

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         </section>
 
         <section>
-          <a href="/assets/Documents/Resume/HarsimranSinghDhillon.pdf" target="_blank">
+          <a href="./assets/Documents/Resume/HarsimranSinghDhillon.pdf" target="_blank">
             <span class="download-button">Download Resume</span>
           </a>
         </section>
