Fixing an issue with the filter

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Certification</button>
+                <button data-select-item>Certificate</button>
               </li>
 
               <li class="select-item">
