Adding Game project and updating resume

--- a/index.html
+++ b/index.html
@@ -313,16 +313,16 @@
               <p class="timeline-text">
                 <ul>
                 <li>
-                  • Led the successful migration of a complex project from Mule to Apache Camel, ensuring seamless integration and deployment in the production environment within a tight deadline of 4 months
+                  • Implemented agile methodology for continuous integration and support during critical 4-month API migration from Mule framework to Apache Camel
                 </li>
                 <li>
-                  • Developed and deployed an API to dynamically modify backend payloads, optimizing communication efficiency and reducing response time by 50% in high-traffic scenarios
+                  • Reduced response times during server outages by 40% by analyzing and resolving complex issues, and supporting the testing team to validate acceptance criteria while optimizing the CI/CD of a REST API
                 </li>
                 <li>
-                  • Worked on production issues, enhancements, and release support for 4 applications and resolved an application server crashing issue in the production environment by lowering the memory usage by 40%
+                  • Resolved an application server crash issue in the production environment by preserving 40% of the memory used; addressed production issues and enhancements; and offered DevOps support for 4 applications
                 </li>
-                <li>
-                  • Automated a human task of closing thousands of requests using a scheduler to minimize manual effort by 35%
+                <li>    
+                  • Automated a human task of closing thousands of requests using queries and a scheduler to minimize manual effort by 35%
                 </li>
               </ul>
               </p>
@@ -337,6 +337,9 @@
 
               <p class="timeline-text">
                 <ul>
+                  <li>
+                    • Delivered Attendance Marking System to the client to reduce manual labor by 25% and paper waste by 40%
+                  </li>
                   <li>
                     • Analyzed and executed Decision Tree algorithm, KNN algorithm, and SVM algorithm
                   </li>
@@ -458,6 +461,42 @@
                 </figure>
 
                 <h3 class="project-title">Foody</h3>
+
+                <p class="project-category">Project</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="project">
+              <a href="https://github.com/harsi15/Crabby" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Crabby.png" alt="Crabby Game" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Crabby - A Platformer Game</h3>
+
+                <p class="project-category">Project</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="project">
+              <a href="https://github.com/harsi15/Game-EggCatcher" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/EggCatcher.png" alt="EggCatcher Game" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">EggCatcher - Game</h3>
 
                 <p class="project-category">Project</p>
 
