--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <li class="service-item">
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Project Management:</h4>
+                <h4 class="h4 service-item-title">Project Management</h4>
 
                 <p class="service-item-text">
 
