--- a/index.html
+++ b/index.html
@@ -665,6 +665,42 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="certificate">
+              <a href="assets/Documents/Certificates/RestfulAPI's.pdf" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/RestfulApi's.png" alt="Designing RESTful APIs certificate" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Designing RESTful APIs</h3>
+
+                <p class="project-category">Certificate</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="certificate">
+              <a href="assets/Documents/Certificates/Containerized Apps with GitHub Actions.pdf" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/ContainerisedApps with Github.png" alt="Build and Deploy Containerized Apps with GitHub Action certificate" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Build and Deploy Containerized Apps with GitHub Actions</h3>
+
+                <p class="project-category">Certificate</p>
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="publication">
               <a href="assets/Documents/Research Paper/IJCRT22A6776.pdf" target="_blank">
 
