Updating the portfolio

--- a/index.html
+++ b/index.html
@@ -701,6 +701,24 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="certificate">
+              <a href="assets/Documents/Certificates/RDBMS PostgreSQL.pdf" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/RDBMS PostgreSQL.png" alt="RDBMS PostgreSQL" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">RDBMS PostgreSQL</h3>
+
+                <p class="project-category">Certificate</p>
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="publication">
               <a href="assets/Documents/Research Paper/IJCRT22A6776.pdf" target="_blank">
 
