--- a/index.html
+++ b/index.html
@@ -684,6 +684,24 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="certificate">
+              <a href="assets/Documents/Certificates/CertificateOfCompletion_Continuous Integration Tools.pdf" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Continuous Integration Tools.png" alt="Continuous Integration" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Continuous Integration: Tools</h3>
+
+                <p class="project-category">Certificate</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="certificate">
               <a href="assets/Documents/Certificates/RDBMS PostgreSQL.pdf" target="_blank">
 
                 <figure class="project-img">
