Adding Data Analysis Project

--- a/index.html
+++ b/index.html
@@ -593,6 +593,24 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="project">
+              <a href="https://github.com/harsi15/Animated-Movies-Data-Analysis" target="_blank" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/MoviesDataAnalysis.png" alt="MoviesDataAnalysis" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Animated Movies Data Analysis</h3>
+
+                <p class="project-category">Project</p>
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="certificate">
               <a href="assets/Documents/Certificates/GoogleCertificate.pdf" target="_blank">
 
