--- a/index.html
+++ b/index.html
@@ -613,6 +613,24 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="certificate">
+              <a href="assets/Documents/Certificates/React.js Essential Training.pdf" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/React.png" alt="React.js Essentials" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">React.js Essentials Training</h3>
+
+                <p class="project-category">Certificate</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="certificate">
               <a href="assets/Documents/Certificates/GoogleCertificate.pdf" target="_blank">
 
                 <figure class="project-img">
