Updating the contents of the profile tab

--- a/index.html
+++ b/index.html
@@ -385,16 +385,16 @@
               <p class="timeline-text">
                 <ul>
                 <li>
-                  • Implemented agile methodology for continuous integration and support during critical 4-month API migration from Mule framework to Apache Camel
+                  • Implemented agile methodologies to streamline the 4-month API conversion project from Mule framework to Apache Camel, resulting in a 43% reduction in the overall project timeline
                 </li>
                 <li>
-                  • Reduced response times during server outages by 40% by analyzing and resolving complex issues, and supporting the testing team to validate acceptance criteria while optimizing the CI/CD of a REST API
+                  • Reduced response times during server outages by 80% by analyzing and resolving complex issues, supporting the testing team, and optimizing the CI/CD of a REST API
                 </li>
                 <li>
-                  • Resolved an application server crash issue in the production environment by preserving 40% of the memory used; addressed production issues and enhancements; and offered DevOps support for 4 applications
+                  • Rectified application server crash issues in the production environment by preserving 53% of memory used, managed production issues and enhancements, and provided DevOps and SDLC support for 4 applications
                 </li>
                 <li>    
-                  • Automated a human task of closing thousands of requests using queries and a scheduler to minimize manual effort by 35%
+                  • Spearheaded development of API solution, resulting in an 82% decrease in manual effort and bolstering efficiency
                 </li>
               </ul>
               </p>
@@ -403,20 +403,20 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Machine Learning Intern</h4>
+              <h4 class="h4 timeline-item-title">Software Engineer Intern</h4>
 
               <span>2020-2020</span>
 
               <p class="timeline-text">
                 <ul>
                   <li>
-                    • Delivered Attendance Marking System to the client to reduce manual labor by 25% and paper waste by 40%
+                    • Implemented Attendance Marking System, reducing manual labor by 87% and paper waste by 64%
                   </li>
                   <li>
-                    • Analyzed and executed Decision Tree algorithm, KNN algorithm, and SVM algorithm
+                    • Debugged and triaged application logs with Splunk, identifying and documenting solutions for each failure call
                   </li>
                   <li>
-                    • Evaluated a project to study the accuracy and error obtained for a particular data set using 4 different algorithms
+                    • Conducted advanced data analysis with MySQL and data visualization tools, resulting in a 47% improvement in targeted marketing
                   </li>
                 </ul>
               </p>
