Updating the profile

--- a/index.html
+++ b/index.html
@@ -157,11 +157,16 @@
         </section>
         <section class="about-text">
           <p>
-            I am a dedicated and results-driven software engineer with strong experience in both backend and frontend development. Throughout my career, I have gained valuable knowledge in various programming languages such as Java, Python, and C++, as well as web development frameworks like Vue.js, Angular, HTML, and CSS.
+            I'm Harsimran Singh Dhillon, currently pursuing a Master of Science in Computer Science at Binghamton University, with an anticipated graduation in 2025. I hold a solid foundation in Computer Engineering from Savitribai Phule Pune University and have demonstrated a consistent academic record throughout my educational journey.
           </p>
-
           <p>
-            With a strong passion for continuous learning and staying updated with the latest technologies, I am constantly expanding my skill set. Through my experiences and knowledge, I have honed my problem-solving abilities, attention to detail, and ability to work collaboratively with cross-functional teams.
+            My professional experience as an Analyst Software Developer at TIAA GBS has honed my expertise in software development and Agile methodologies. During my tenure, I successfully implemented Agile practices, reducing project timelines by 27%, and resolved critical server outages, achieving an 80% reduction in response times. My role as an intern at Cognifront further enabled me to introduce automation systems that drastically cut down manual labor and improved targeted marketing efficacy by 47% through strategic data visualization tools.
+          </p>
+          <p>
+            I have contributed to various impactful projects, including the development of an e-commerce website that significantly boosted sales and customer retention via enhanced user experiences. My technical skill set includes proficiency in Java, Python, and C++, as well as advanced competencies in React.js, Angular, and essential project management tools like Git and Docker.
+          </p>
+          <p>
+            In addition to my technical skills, I am actively engaged within the graduate community, leading events designed to enhance the technical competence of my peers. My blend of technical acumen, proven problem-solving abilities, and effective project management experience positions me to contribute meaningfully to your team, driving both technological advancements and fostering a dynamic, collaborative environment.
           </p>
         </section>
 
@@ -343,7 +348,7 @@
               <span>2023 — 2025</span>
 
               <p class="timeline-text">
-                Masters of Science in Computer Science (GPA : 3.7)
+                Masters of Science in Computer Science (GPA : 3.81)
               </p>
 
             </li>
