fixing styling issues

--- a/index.html
+++ b/index.html
@@ -156,18 +156,20 @@
           <h3 class="auto-type">Hello</h3>
         </section>
         <section class="about-text">
-          <ul>
+          <ul class="Technical">
             <h4>Technical Skills:</h4>
-            <li>• Proficient in <b>Java, Python, C++, React.js, SQL, Git, Docker, AWS, Spring Boot, and more</b></li>
-            <li>• Experienced in project management tools like <b>Gitlab, Jenkins, and Scrum</b></li>
-              
+            <li>&emsp;<b>•</b> Proficient in <b>Java, Python, C++, React.js, SQL, Git, Docker, AWS, Spring Boot, and more</b></li>
+            <li>&emsp;<b>•</b> Experienced in project management tools like <b>Github, Jenkins, JIRA and Scrum</b></li>
+          </ul>
+          <ul class="Professional">
             <h4>Professional Experience:</h4>   
-            <li>• Contributed to <b>reducing response times during server outages by 80%</b> at TIAA GBS in India</li>
-            <li>• Led the development of an API solution resulting in an <b>82% decrease in manual effort</b></li>
-            
+            <li>&emsp;<b>•</b> Contributed to <b>reducing response times during server outages by 80%</b> at TIAA GBS in India</li>
+            <li>&emsp;<b>•</b> Led the development of an API solution resulting in an <b>82% decrease in manual effort</b></li>
+          </ul>
+          <ul class="Project">
             <h4>Project Experience:</h4>
-            <li>• Managed the development of a Movies Data Analysis project, improving <b>query execution efficiency by 73%</b></li>
-            <li>• Crafted a user-friendly e-commerce website 'The Spice Tradition', resulting in an <b>82% increase in online sales</b></li>
+            <li>&emsp;<b>•</b> Managed the development of a Movies Data Analysis project, improving <b>query execution efficiency by 73%</b></li>
+            <li>&emsp;<b>•</b> Crafted a user-friendly e-commerce website 'The Spice Tradition', resulting in an <b>82% increase in online sales</b></li>
           </ul>
         </section>
 
@@ -326,10 +328,10 @@
 
               <h4 class="h4 timeline-item-title">State University of New York at Binghamton</h4>
 
-              <span>2023 — 2025</span>
+              <span><i>Aug 2023 — Present</i></span>
 
               <p class="timeline-text">
-                Masters of Science in Computer Science (GPA : 3.81)
+                Masters of Science in Computer Science <b>(GPA : 3.81)</b>
               </p>
 
             </li>
@@ -338,10 +340,10 @@
 
               <h4 class="h4 timeline-item-title">K. K. Wagh Institute Of Engineering Education And Research</h4>
 
-              <span>2017 — 2021</span>
+              <span><i>Aug 2017 — May 2021</i></span>
 
               <p class="timeline-text">
-                Bachelors of Engineering in Computer Engineering (GPA : 3.64)
+                Bachelors of Engineering in Computer Engineering <b>(GPA : 3.64)</b>
               </p>
 
             </li>
@@ -366,21 +368,21 @@
 
               <h4 class="h4 timeline-item-title">Analyst, Software Developer - TIAA GBS</h4>
 
-              <span>2021-2023</span>
+              <span><i>Jul 2021 - Jul 2023 (2 Years)</i></span>
 
               <p class="timeline-text">
                 <ul>
                 <li>
-                  • Implemented agile methodologies to streamline the 4-month API conversion project from Mule framework to Apache Camel, resulting in a 43% reduction in the overall project timeline
+                  <b>•</b> <b>Implemented agile methodologies</b> to streamline the 4-month API conversion project from Mule framework to Apache Camel, resulting in a <b>43% reduction in the overall project timeline</b>
                 </li>
                 <li>
-                  • Reduced response times during server outages by 80% by analyzing and resolving complex issues, supporting the testing team, and optimizing the CI/CD of a REST API
+                  <b>•</b> <b>Reduced response times during server outages by 80%</b> by analyzing and resolving complex issues, supporting the testing team, and optimizing the CI/CD of a REST API
                 </li>
                 <li>
-                  • Rectified application server crash issues in the production environment by preserving 53% of memory used, managed production issues and enhancements, and provided DevOps and SDLC support for 4 applications
+                  <b>•</b> <b>Rectified application server crash issues</b> in the <b>production environment</b> by <b>preserving 53% of memory</b> used, managed production issues and enhancements, and provided DevOps and SDLC support for 4 applications
                 </li>
                 <li>    
-                  • Spearheaded development of API solution, resulting in an 82% decrease in manual effort and bolstering efficiency
+                  <b>•</b> Spearheaded development of API solution, resulting in an <b>82% decrease in manual effort and bolstering efficiency</b>
                 </li>
               </ul>
               </p>
@@ -391,18 +393,18 @@
 
               <h4 class="h4 timeline-item-title">Software Engineer Intern - Cognifront</h4>
 
-              <span>2020-2020</span>
+              <span><i>Jun 2020 - Jul 2020 (2 Months)</i></span>
 
               <p class="timeline-text">
                 <ul>
                   <li>
-                    • Implemented Attendance Marking System, reducing manual labor by 87% and paper waste by 64%
+                    <b>•</b> Implemented Attendance Marking System, <b>reducing manual labor by 87% and paper waste by 64%</b>
                   </li>
                   <li>
-                    • Debugged and triaged application logs with Splunk, identifying and documenting solutions for each failure call
+                    <b>•</b> <b>Debugged and triaged application logs with Splunk</b>, identifying and documenting solutions for each failure call
                   </li>
                   <li>
-                    • Conducted advanced data analysis with MySQL and data visualization tools, resulting in a 47% improvement in targeted marketing
+                    <b>•</b> Conducted advanced data analysis with MySQL and data visualization tools, resulting in a <b>47% improvement in targeted marketing</b>
                   </li>
                 </ul>
               </p>
@@ -415,7 +417,7 @@
 
         <section>
           <a href="./assets/Documents/Resume/HarsimranSinghDhillon.pdf" target="_blank">
-            <span class="download-button">Download Resume</span>
+            <span class="download-button"><b>Download Resume</b></span>
           </a>
         </section>
 
