--- a/index.html
+++ b/index.html
@@ -491,6 +491,22 @@
 
           <ul class="project-list">
 
+            <li class="project-item  active" data-filter-item data-category="project">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/anuraj.png" alt="MoviesDataAnalysis" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">The Spice Tradition - By Anuraj</h3>
+
+                <p class="project-category">Project (FullStack)</p>
+
+              </a>
+            </li>
 
             <li class="project-item  active" data-filter-item data-category="project">
               <a href="https://github.com/harsi15/Animated-Movies-Data-Analysis" target="_blank" target="_blank">
@@ -511,24 +527,6 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="project">
-              <a href="https://github.com/harsi15/Depression-Detection-Classifier" target="_blank">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/Depression Detection System.png" alt="Depression Detection System" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Depression Detection System</h3>
-
-                <p class="project-category">Project (FullStack)</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="project">
               <a href="https://github.com/harsi15/Foody" target="_blank">
 
                 <figure class="project-img">
@@ -542,6 +540,24 @@
                 <h3 class="project-title">Foody</h3>
 
                 <p class="project-category">Project (Frontend)</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="project">
+              <a href="https://github.com/harsi15/Depression-Detection-Classifier" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Depression Detection System.png" alt="Depression Detection System" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Depression Detection System</h3>
+
+                <p class="project-category">Project (FullStack)</p>
 
               </a>
             </li>
