--- a/index.html
+++ b/index.html
@@ -501,9 +501,9 @@
                   <img src="./assets/images/anuraj.png" alt="MoviesDataAnalysis" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">The Spice Tradition - By Anuraj</h3>
+                <h3 class="project-title">The Spice Tradition (E-commerce platform for spices and herbs)</h3>
 
-                <p class="project-category">Project (FullStack)</p>
+                <p class="project-category">Client Project (FullStack)</p>
 
               </a>
             </li>
