Updating work experience

--- a/index.html
+++ b/index.html
@@ -366,6 +366,28 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Web Developer Intern - Bunchful</h4>
+
+              <span><i>May 2024 - Present</i></span>
+
+              <p class="timeline-text">
+                <ul>
+                <li>
+                  <b>•</b> Migrated 2 major websites to the React framework, resulting in a <b>25% decrease in page load times</b> and improved user experience
+                </li>
+                <li>
+                  <b>•</b>Introduced a web development checklist with an integrated scoring system, <b>boosting team efficiency by 40%</b>
+                </li>
+                <li>
+                  <b>•</b>Utilized Google Analytics to <b>boost site navigation by 37%</b> through insightful metric analysis
+                </li>
+              </ul>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Analyst, Software Developer - TIAA GBS</h4>
 
               <span><i>Jul 2021 - Jul 2023 (2 Years)</i></span>
