Adding Azure fundamentals cert

--- a/index.html
+++ b/index.html
@@ -621,6 +621,26 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="certificate">
+              <a href="https://learn.microsoft.com/en-gb/users/harsimransinghdhillon-4172/credentials/916169f388b027b7?ref=https%3A%2F%2Fwww.linkedin.com%2F" target="_blank" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/AZ900.png" alt="BookAddict" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Azure Fundamentals</h3>
+
+                <p class="project-category">Certificate</p>
+
+              </a>
+            </li>
+
+            
+
+            <li class="project-item  active" data-filter-item data-category="certificate">
               <a href="assets/Documents/Certificates/React.js Essential Training.pdf" target="_blank">
 
                 <figure class="project-img">
