Updating the portfolio

--- a/index.html
+++ b/index.html
@@ -366,9 +366,28 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">DevOps and Networking Intern - Geeks Solutions</h4>
+
+              <span><i>June 2024 - July 2024</i></span>
+
+              <p class="timeline-text">
+                <ul>
+                <li>
+                  <b>•</b> <b>Boosted cross-cloud communication by 63%</b> via site-to-site VPN between AWS and Azure, streamlining network operations and reducing latency
+                </li>
+                <li>
+                  <b>•</b><b>Achieved 96% client satisfaction</b> by ensuring secure, reliable connections and simplifying network management
+                </li>
+              </ul>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Web Developer Intern - Bunchful</h4>
 
-              <span><i>May 2024 - Present</i></span>
+              <span><i>May 2024 - June 2024</i></span>
 
               <p class="timeline-text">
                 <ul>
