Updating the portfolio

--- a/index.html
+++ b/index.html
@@ -156,20 +156,28 @@
           <h3 class="auto-type">Hello</h3>
         </section>
         <section class="about-text">
-          <ul class="Technical">
-            <h4>Technical Skills:</h4>
-            <li>&emsp;<b>•</b> Proficient in <b>Java, Python, C++, React.js, SQL, Git, Docker, AWS, Spring Boot, and more</b></li>
-            <li>&emsp;<b>•</b> Experienced in project management tools like <b>Github, Jenkins, JIRA and Scrum</b></li>
+          <ul class="Education">
+            <h3 style="margin-top: 10px;">Education:</h3>
+            <li style="margin: 3px; margin-left: 12px;"><b>•</b> <b>Master of Science in Computer Science</b> - State University of New York <b>(GPA: 3.81/4)</b></li>
+            <li style="margin: 3px; margin-left: 12px;"><b>•</b> <b>Bachelor of Engineering in Computer Engineering</b> - Savitribai Phule Pune University <b>(GPA: 3.64/4)</b></li>
           </ul>
           <ul class="Professional">
-            <h4>Professional Experience:</h4>   
-            <li>&emsp;<b>•</b> Contributed to <b>reducing response times during server outages by 80%</b> at TIAA GBS in India</li>
-            <li>&emsp;<b>•</b> Led the development of an API solution resulting in an <b>82% decrease in manual effort</b></li>
+            <h3 style="margin-top: 10px;">Professional Experience:</h3>   
+            <li style="margin: 3px; margin-left: 12px;"><b>•</b> <b>DevOps and Networking Intern at Geeks Solutions:</b> Boosted cross cloud communication by 63% via site to site VPN between AWS and Azure</li>
+            <li style="margin: 3px; margin-left: 12px;"><b>•</b> <b>Web Developer Intern at Bunchful:</b> Migrated 2 major websites to React framework, resulting in a 25% decrease in page load times</li>
+            <li style="margin: 3px; margin-left: 12px;"><b>•</b> <b>Software Developer at TIAA GBS:</b> Spearheaded development of API solution, resulting in an 82% decrease in manual effort</li>
           </ul>
+          <ul class="Technical">
+            <h3 style="margin-top: 10px;">Technical Skills:</h3>
+            <li style="margin: 3px; margin-left: 12px;"><b>•</b> Proficient in <b>Java, Python, JavaScript, SQL, NoSQL, Git, Docker, Spring Boot, AWS, Azure, Node.js, </b> and more</li>
+            <li style="margin: 3px; margin-left: 12px;"><b>•</b> Experienced in project management tools like <b>Git, Github, Gitlab, Jenkins, JIRA and Bitbucket</b></li>
+            <li style="margin: 3px; margin-left: 12px;"><b>•</b> Certified in <b>Azure Fundamentals, RESTful APIs, Build and Deploy Containerized Apps</b></li>
+          </ul>
+          
           <ul class="Project">
-            <h4>Project Experience:</h4>
-            <li>&emsp;<b>•</b> Managed the development of a Movies Data Analysis project, improving <b>query execution efficiency by 73%</b></li>
-            <li>&emsp;<b>•</b> Crafted a user-friendly e-commerce website 'The Spice Tradition', resulting in an <b>82% increase in online sales</b></li>
+            <h3 style="margin-top: 10px;">Project Experience:</h3>
+            <li style="margin: 3px; margin-left: 12px;"><b>•</b> <b>Led Movies Data Analysis Project:</b> Utilized MongoDB for NoSQL queries and achieved <b>73% reduction in query execution time</b></li>
+            <li style="margin: 3px; margin-left: 12px;"><b>•</b> Developed e-commerce website 'The Spice Tradition' resulting in <b>82% increase in online sales within first month</b></li>
           </ul>
         </section>
 
